--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- start overlay -->
         <div class="overlay">
           <div class="wrap">
-            <ul class="wrap-nav my-5 py-5">
+            <ul class="wrap-nav mt-5 py-5">
               <li class="nav-item">
                 <a href="#">Home</a>
               </li>
@@ -69,7 +69,7 @@
         <!-- end overlay -->
         <!-- start title -->
         <div class="bio text-light mb-5">
-          <h1>Hi there</h1>
+          <h1>Hi there,</h1>
           <h1 class="mb-5">I am Abhisek 👋🏻</h1>
           <p class="mb-5">
             Freelance web developer from India. I enjoy building everything from
