update about-me section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     />
   </head>
   <body>
+    <!-- start intro -->
     <section class="intro">
       <div class="img-overlay"></div>
       <div class="container">
@@ -78,6 +79,35 @@
           <button class="btn btn-outline-light">Ger in touch</button>
         </div>
         <!-- end title -->
+      </div>
+    </section>
+    <!-- end intro -->
+    <section class="about-me my-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 com-sm-12">
+            <!-- <div class="img-bg"></div> -->
+            <div class="img">
+              <img src="assets/profile2.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-md-8 com-sm-12">
+            <div class="about">
+              <h3 class="text-capitalize">about me</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem,
+                fuga debitis? Ullam voluptatem itaque a facilis error, ratione
+                praesentium eligendi, corporis repellat, accusamus iste! Labore
+                sequi quasi similique dicta exercitationem.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+                placeat labore dolores, accusamus possimus eveniet. Nostrum
+                maiores quam tenetur sint!
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
