--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
           <div class="col-md-8 com-sm-12">
             <div class="about">
-              <h3 class="text-capitalize">about me</h3>
+              <h4 class="text-capitalize py-4">about me</h4>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem,
                 fuga debitis? Ullam voluptatem itaque a facilis error, ratione
