--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <!-- start intro -->
     <section class="intro">
@@ -82,6 +83,7 @@
       </div>
     </section>
     <!-- end intro -->
+    <!-- start about -->
     <section class="about-me my-5">
       <div class="container">
         <div class="row">
@@ -110,6 +112,134 @@
         </div>
       </div>
     </section>
+    <!-- start about -->
+    <!-- start work -->
+    <section class="work">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 class="text-center my-2">My Work</h2>
+          </div>
+          <div class="project my-5">
+            <div class="col-md-4 col-12 mx-auto">
+              <div class="item">
+                <a
+                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  target="_blank"
+                >
+                  <div class="content-overlay"></div>
+                  <img
+                    class="content-image"
+                    src="https://source.unsplash.com/collection/750/300x250"
+                  />
+                  <div class="content-details fadeIn-bottom">
+                    <h3 class="content-title">This is a title</h3>
+                    <p class="content-text">This is a short description</p>
+                    <button class="btn btn-outline-light">View Project</button>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4 col-12">
+              <div class="item">
+                <a
+                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  target="_blank"
+                >
+                  <div class="content-overlay"></div>
+                  <img
+                    class="content-image"
+                    src="https://source.unsplash.com/collection/127/300x250"
+                  />
+                  <div class="content-details fadeIn-bottom">
+                    <h3 class="content-title">This is a title</h3>
+                    <p class="content-text">This is a short description</p>
+                    <button class="btn btn-outline-light">View Project</button>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4 col-12">
+              <div class="item">
+                <a
+                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  target="_blank"
+                >
+                  <div class="content-overlay"></div>
+                  <img
+                    class="content-image"
+                    src="https://source.unsplash.com/collection/107/300x250"
+                  />
+                  <div class="content-details fadeIn-bottom">
+                    <h3 class="content-title">This is a title</h3>
+                    <p class="content-text">This is a short description</p>
+                    <button class="btn btn-outline-light">View Project</button>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4 col-12">
+              <div class="item">
+                <a
+                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  target="_blank"
+                >
+                  <div class="content-overlay"></div>
+                  <img
+                    class="content-image"
+                    src="https://source.unsplash.com/collection/1200/300x250"
+                  />
+                  <div class="content-details fadeIn-bottom">
+                    <h3 class="content-title">This is a title</h3>
+                    <p class="content-text">This is a short description</p>
+                    <button class="btn btn-outline-light">View Project</button>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4 col-12">
+              <div class="item">
+                <a
+                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  target="_blank"
+                >
+                  <div class="content-overlay"></div>
+                  <img
+                    class="content-image"
+                    src="https://source.unsplash.com/collection/450/300x250"
+                  />
+                  <div class="content-details fadeIn-bottom">
+                    <h3 class="content-title">This is a title</h3>
+                    <p class="content-text">This is a short description</p>
+                    <button class="btn btn-outline-light">View Project</button>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4 col-12">
+              <div class="item">
+                <a
+                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  target="_blank"
+                >
+                  <div class="content-overlay"></div>
+                  <img
+                    class="content-image"
+                    src="https://source.unsplash.com/collection/1001/300x250"
+                  />
+                  <div class="content-details fadeIn-bottom">
+                    <h3 class="content-title">This is a title</h3>
+                    <p class="content-text">This is a short description</p>
+                    <button class="btn btn-outline-light">View Project</button>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end about -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
