change project thumbnail

--- a/index.html
+++ b/index.html
@@ -128,10 +128,7 @@
                   target="_blank"
                 >
                   <div class="content-overlay"></div>
-                  <img
-                    class="content-image"
-                    src="https://source.unsplash.com/collection/750/300x250"
-                  />
+                  <img class="content-image" src="assets/project1@2x.png" />
                   <div class="content-details fadeIn-bottom">
                     <h3 class="content-title">This is a title</h3>
                     <p class="content-text">This is a short description</p>
@@ -147,10 +144,7 @@
                   target="_blank"
                 >
                   <div class="content-overlay"></div>
-                  <img
-                    class="content-image"
-                    src="https://source.unsplash.com/collection/127/300x250"
-                  />
+                  <img class="content-image" src="assets/project2@2x.png" />
                   <div class="content-details fadeIn-bottom">
                     <h3 class="content-title">This is a title</h3>
                     <p class="content-text">This is a short description</p>
@@ -166,10 +160,7 @@
                   target="_blank"
                 >
                   <div class="content-overlay"></div>
-                  <img
-                    class="content-image"
-                    src="https://source.unsplash.com/collection/107/300x250"
-                  />
+                  <img class="content-image" src="assets/project3@2x.png" />
                   <div class="content-details fadeIn-bottom">
                     <h3 class="content-title">This is a title</h3>
                     <p class="content-text">This is a short description</p>
