change work thumbnail

--- a/index.html
+++ b/index.html
@@ -128,39 +128,10 @@
                   target="_blank"
                 >
                   <div class="content-overlay"></div>
-                  <img class="content-image" src="assets/project1@2x.png" />
-                  <div class="content-details fadeIn-bottom">
-                    <h3 class="content-title">This is a title</h3>
-                    <p class="content-text">This is a short description</p>
-                    <button class="btn btn-outline-light">View Project</button>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="col-md-4 col-12">
-              <div class="item">
-                <a
-                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
-                  target="_blank"
-                >
-                  <div class="content-overlay"></div>
-                  <img class="content-image" src="assets/project2@2x.png" />
-                  <div class="content-details fadeIn-bottom">
-                    <h3 class="content-title">This is a title</h3>
-                    <p class="content-text">This is a short description</p>
-                    <button class="btn btn-outline-light">View Project</button>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="col-md-4 col-12">
-              <div class="item">
-                <a
-                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
-                  target="_blank"
-                >
-                  <div class="content-overlay"></div>
-                  <img class="content-image" src="assets/project3@2x.png" />
+                  <img
+                    class="content-image"
+                    src="https://source.unsplash.com/collection/487395/300x250"
+                  />
                   <div class="content-details fadeIn-bottom">
                     <h3 class="content-title">This is a title</h3>
                     <p class="content-text">This is a short description</p>
@@ -178,7 +149,45 @@
                   <div class="content-overlay"></div>
                   <img
                     class="content-image"
-                    src="https://source.unsplash.com/collection/1200/300x250"
+                    src="https://source.unsplash.com/collection/1103088/300x250"
+                  />
+                  <div class="content-details fadeIn-bottom">
+                    <h3 class="content-title">This is a title</h3>
+                    <p class="content-text">This is a short description</p>
+                    <button class="btn btn-outline-light">View Project</button>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4 col-12">
+              <div class="item">
+                <a
+                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  target="_blank"
+                >
+                  <div class="content-overlay"></div>
+                  <img
+                    class="content-image"
+                    src="https://source.unsplash.com/collection/428621/300x250"
+                  />
+                  <div class="content-details fadeIn-bottom">
+                    <h3 class="content-title">This is a title</h3>
+                    <p class="content-text">This is a short description</p>
+                    <button class="btn btn-outline-light">View Project</button>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4 col-12">
+              <div class="item">
+                <a
+                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  target="_blank"
+                >
+                  <div class="content-overlay"></div>
+                  <img
+                    class="content-image"
+                    src="https://source.unsplash.com/collection/234/300x250"
                   />
                   <div class="content-details fadeIn-bottom">
                     <h3 class="content-title">This is a title</h3>
