add knowledge section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <h1 class="mb-5">I am Abhisek 👋🏻</h1>
           <p class="mb-5">
             Freelance web developer from India. I enjoy building everything from
-            small business sites to rich interactive web apps.
+            small business sites to rich interactive web applications.
           </p>
           <button class="btn btn-outline-light">Ger in touch</button>
         </div>
@@ -90,35 +90,84 @@
           <div class="col-md-4 com-sm-12">
             <!-- <div class="img-bg"></div> -->
             <div class="img">
-              <img src="assets/profile2.jpg" alt="" class="img-fluid" />
+              <img src="assets/profile2.jpg" alt="profile" />
             </div>
           </div>
           <div class="col-md-8 com-sm-12">
             <div class="about">
               <h4 class="text-capitalize py-4">about me</h4>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem,
-                fuga debitis? Ullam voluptatem itaque a facilis error, ratione
-                praesentium eligendi, corporis repellat, accusamus iste! Labore
-                sequi quasi similique dicta exercitationem.
+                I am a developer with knowledge of business and design. I'm a
+                B.COM student, after gradutation i started learning design and
+                coding. I joined
+                <a class="text-dark" href="">Arena Animation</a> and complete my
+                two years course on Graphics Design & Web Development (GWDD+) .
+                Then i created some website and web application and I enjoy
+                building everything business sites to rich interactive web apps.
               </p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-                placeat labore dolores, accusamus possimus eveniet. Nostrum
-                maiores quam tenetur sint!
+                I believe that with basic knowledge of coding its good to have
+                good design but more important design solve the business problem
+                first.
               </p>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- start about -->
-    <!-- start work -->
-    <section class="work">
+    <!-- end about -->
+    <!-- start expertize -->
+    <section class="expertize p-5">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h2 class="text-center my-2">My Work</h2>
+            <h4 class="text-center my-2">Knowledge & Expertize</h4>
+          </div>
+        </div>
+        <div class="knowledge my-5">
+          <div class="col-lg-4 col-12">
+            <div class="uidesign speacilize">
+              <h5>UI/UX Design</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Quidem, rerum voluptas. Optio, cum sed! Asperiores molestias
+                aspernatur eligendi voluptates veniam!
+              </p>
+              <button class="btn btn-outline-dark">Read more</button>
+            </div>
+          </div>
+          <div class="col-lg-4 col-12">
+            <div class="branding speacilize">
+              <h5>Branding</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Quidem, rerum voluptas. Optio, cum sed! Asperiores molestias
+                aspernatur eligendi voluptates veniam!
+              </p>
+              <button class="btn btn-outline-dark">Read more</button>
+            </div>
+          </div>
+          <div class="col-lg-4 col-12">
+            <div class="frontend speacilize">
+              <h5>Frontend Dev</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Quidem, rerum voluptas. Optio, cum sed! Asperiores molestias
+                aspernatur eligendi voluptates veniam!
+              </p>
+              <button class="btn btn-outline-dark">Read more</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end expertize -->
+    <!-- start work -->
+    <section class="work my-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h4 class="text-center my-2">My Work</h4>
           </div>
           <div class="project my-5">
             <div class="col-md-4 col-12 mx-auto">
