--- a/index.html
+++ b/index.html
@@ -162,6 +162,17 @@
       </div>
     </section>
     <!-- end expertize -->
+    <!-- start skill -->
+    <section class="skills p-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h4 class="text-center my-2">Software Skills</h4>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end skill -->
     <!-- start work -->
     <section class="work my-5">
       <div class="container">
