add skills sections

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Esteban&family=Montserrat:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -29,7 +29,7 @@
       <div class="container">
         <!-- start navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="#">abhisek.</a>
+          <a class="navbar-brand" href="#">&#60;/Developer&#62;</a>
           <div class="button">
             <a class="btn-open" href="#"></a>
           </div>
@@ -71,13 +71,13 @@
         <!-- end overlay -->
         <!-- start title -->
         <div class="bio text-light mb-5">
-          <h1>Hi there,</h1>
+          <h4>Hi there,</h4>
           <h1 class="mb-5">I am Abhisek 👋🏻</h1>
-          <p class="mb-5">
+          <div class="mb-5 dev text-center">
             Freelance web developer from India. I enjoy building everything from
             small business sites to rich interactive web applications.
-          </p>
-          <button class="btn btn-outline-light">Ger in touch</button>
+          </div>
+          <button class="btn btn-outline-light">Get in touch</button>
         </div>
         <!-- end title -->
       </div>
@@ -90,7 +90,7 @@
           <div class="col-md-4 com-sm-12">
             <!-- <div class="img-bg"></div> -->
             <div class="img">
-              <img src="assets/profile2.jpg" alt="profile" />
+              <img src="assets/about_me.png" alt="profile" class="img-fluid" />
             </div>
           </div>
           <div class="col-md-8 com-sm-12">
@@ -99,17 +99,17 @@
               <p>
                 I am a developer with knowledge of business and design. I'm a
                 B.COM student, after gradutation i started learning design and
-                coding. I joined
-                <a class="text-dark" href="">Arena Animation</a> and complete my
-                two years course on Graphics Design & Web Development (GWDD+) .
-                Then i created some website and web application and I enjoy
-                building everything business sites to rich interactive web apps.
+                coding. I joined Arena Animation and complete my two years
+                course on Graphics Design & Web Development (GWDD+) . Then i
+                created some website and web application and I enjoy building
+                everything business sites to rich interactive web apps.
               </p>
               <p>
                 I believe that with basic knowledge of coding its good to have
                 good design but more important design solve the business problem
                 first.
               </p>
+              <button class="btn btn-outline-dark mt-2">Download CV</button>
             </div>
           </div>
         </div>
@@ -130,8 +130,7 @@
               <h5>UI/UX Design</h5>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Quidem, rerum voluptas. Optio, cum sed! Asperiores molestias
-                aspernatur eligendi voluptates veniam!
+                Quidem, rerum voluptas. Optio, cum sed!
               </p>
               <button class="btn btn-outline-dark">Read more</button>
             </div>
@@ -141,8 +140,7 @@
               <h5>Branding</h5>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Quidem, rerum voluptas. Optio, cum sed! Asperiores molestias
-                aspernatur eligendi voluptates veniam!
+                Quidem, rerum voluptas. Optio,
               </p>
               <button class="btn btn-outline-dark">Read more</button>
             </div>
@@ -152,8 +150,7 @@
               <h5>Frontend Dev</h5>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Quidem, rerum voluptas. Optio, cum sed! Asperiores molestias
-                aspernatur eligendi voluptates veniam!
+                Quidem, rerum voluptas.
               </p>
               <button class="btn btn-outline-dark">Read more</button>
             </div>
@@ -163,11 +160,52 @@
     </section>
     <!-- end expertize -->
     <!-- start skill -->
-    <section class="skills p-5">
+    <section class="skills pt-5">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
-            <h4 class="text-center my-2">Software Skills</h4>
+          <div class="col-md-6 col-12">
+            <h4 class="text-center">Lets talk about my skills</h4>
+            <div class="category my-5">
+              <div class="design">
+                <strong class="">Design</strong>
+                <ul>
+                  <li>UI/UX Design</li>
+                  <li>Website Design</li>
+                  <li>Mobile App Design</li>
+                  <li>Prototyping & Testing</li>
+                  <li>Typography</li>
+                  <li>Graphics & Illustration</li>
+                </ul>
+              </div>
+              <div class="development">
+                <strong>Development</strong>
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Javascript (ECMA6)</li>
+                  <li>Jquery</li>
+                  <li>PHP / MySql</li>
+                  <li>NodeJs</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-12">
+            <h4 class="text-center">Expertize in</h4>
+            <div class="software my-5">
+              <div>
+                <img src="assets/icons8-adobe-photoshop.svg" alt="software" />
+                <img src="assets//icons8-adobe-xd.svg" alt="software" />
+                <img src="assets/icons8-adobe-illustrator-48.png" alt="">
+              </div>
+              <div>
+              <img src="assets/icons8-discord-new-logo.svg" alt="software" />
+              <img
+                src="assets/icons8-visual-studio-code-2019.svg"
+                alt="software"
+              />
+              <img src="assets/icons8-git-48.png" alt="">
+              </div>
           </div>
         </div>
       </div>
