add skills sections

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
                 good design but more important design solve the business problem
                 first.
               </p>
-              <button class="btn btn-outline-dark mt-2">Download CV</button>
+              <a download="resume.pdf" href="assets/resume.pdf">
+                <button class="btn btn-outline-dark mt-2">Download CV</button>
+                </a>
             </div>
           </div>
         </div>
