add skills sections

--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
             <div class="uidesign speacilize">
               <h5>UI/UX Design</h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Quidem, rerum voluptas. Optio, cum sed!
+                User experience is a person's emotions and attitudes about using a particular product, system or service.
               </p>
               <button class="btn btn-outline-dark">Read more</button>
             </div>
@@ -141,8 +140,8 @@
             <div class="branding speacilize">
               <h5>Branding</h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Quidem, rerum voluptas. Optio,
+                A brand is a name, term, design, symbol or any other feature that identifies one seller's good or service as distinct
+                from those of other sellers.
               </p>
               <button class="btn btn-outline-dark">Read more</button>
             </div>
@@ -151,8 +150,8 @@
             <div class="frontend speacilize">
               <h5>Frontend Dev</h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Quidem, rerum voluptas.
+                Front-end web development is the practice of converting data to a graphical interface, through the use of HTML, CSS, and
+                JavaScript
               </p>
               <button class="btn btn-outline-dark">Read more</button>
             </div>
