add skills sections

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <!-- start title -->
         <div class="bio text-light mb-5">
           <h4>Hi there,</h4>
-          <h1 class="mb-5">I am Abhisek 👋🏻</h1>
+          <h1 class="mb-5">I'm Abhisek 👋🏻</h1>
           <div class="mb-5 dev text-center">
             Freelance web developer from India. I enjoy building everything from
             small business sites to rich interactive web applications.
@@ -140,8 +140,7 @@
             <div class="branding speacilize">
               <h5>Branding</h5>
               <p>
-                A brand is a name, term, design, symbol or any other feature that identifies one seller's good or service as distinct
-                from those of other sellers.
+                A brand is a name, term, design, symbol or any other feature that identifies...
               </p>
               <button class="btn btn-outline-dark">Read more</button>
             </div>
@@ -150,8 +149,7 @@
             <div class="frontend speacilize">
               <h5>Frontend Dev</h5>
               <p>
-                Front-end web development is the practice of converting data to a graphical interface, through the use of HTML, CSS, and
-                JavaScript
+                Front-end web development is the practice of converting data to a graphical interface...
               </p>
               <button class="btn btn-outline-dark">Read more</button>
             </div>
@@ -166,7 +164,7 @@
         <div class="row">
           <div class="col-md-6 col-12">
             <h4 class="text-center">Lets talk about my skills</h4>
-            <div class="category my-5">
+            <div class="category mt-5">
               <div class="design">
                 <strong class="">Design</strong>
                 <ul>
