--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="media.css" />
     <link
@@ -119,7 +119,7 @@
     </section>
     <!-- end about -->
     <!-- start expertize -->
-    <section class="expertize p-5">
+    <section class="expertize py-5">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -190,7 +190,7 @@
             </div>
           </div>
           <div class="col-md-6 col-12">
-            <h4 class="text-center">Expertize in</h4>
+            <h4 class="text-center">Software skills</h4>
             <div class="software my-5">
               <div>
                 <img src="assets/icons8-adobe-photoshop.svg" alt="software" />
@@ -336,7 +336,70 @@
         </div>
       </div>
     </section>
-    <!-- end about -->
+    <!-- end work -->
+    <!-- start contact -->
+    <section class="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h4 class="text-center my-2">Contact us</h4>
+          </div>
+          <div class="col-lg-6 col-sm-12">
+            <div class="message mx-4">
+              <h4 class="my-5">Got a project, let's connect</h4>
+              <form action="#" method="POST" class="">
+                <div class="form-group">
+                  <input type="text" name="name" id="name" class="form-control" placeholder="Name">
+                </div>
+                <div class="form-group">
+                  <input type="email" name="email" id="email" class="form-control" placeholder="Email">
+                </div>
+                <div class="form-group">
+                  <input type="number" name="number" id="number" class="form-control" placeholder="Phone no">
+                </div>
+                <div class="form-group">
+                  <textarea class="form-control" id="message" rows="5" placeholder="Message"></textarea>
+                </div>
+                  <button type="submit" class="btn btn-outline-dark">Submit</button>
+              </form>
+            </div>
+          </div>
+          <div class="col-lg-6 col-sm-12">
+            <div class="contact-info mx-4">
+              <h4 class="my-5">Contact information</h4>
+              <div class="company">
+                <div class="icon">
+                  <i class="fa fa-phone" aria-hidden="true"></i>
+                </div>
+                <div class="company_detail">
+                  <p>Phone number</p>
+                  <small>+91-7908003747</small>
+                </div>
+              </div>
+              <div class="company">
+                <div class="icon">
+                  <i class="fa fa-envelope" aria-hidden="true"></i>
+                </div>
+                <div class="company_detail">
+                  <p>Email Address</p>
+                  <small>abhisek529@gmail.com</small>
+                </div>
+              </div>
+              <div class="company">
+                <div class="icon">
+                  <i class="fa fa-map-marker" aria-hidden="true"></i>
+                </div>
+                <div class="company_detail">
+                  <p>Location</p>
+                  <small>Agrapara, Kolkata, 700109</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end contact -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
