change work section with project file

--- a/index.html
+++ b/index.html
@@ -226,12 +226,12 @@
                 >
                   <div class="content-overlay"></div>
                   <img
-                    class="content-image"
-                    src="https://source.unsplash.com/collection/487395/300x250"
+                    class="content-image img-fluid"
+                    src="assets/tech_media.png"
                   />
                   <div class="content-details fadeIn-bottom">
-                    <h3 class="content-title">This is a title</h3>
-                    <p class="content-text">This is a short description</p>
+                    <h4 class="content-title">Tech Media</h4>
+                    <p class="content-text">Service website for business promotion</p>
                     <button class="btn btn-outline-light">View Project</button>
                   </div>
                 </a>
@@ -240,17 +240,17 @@
             <div class="col-md-4 col-12">
               <div class="item">
                 <a
-                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  href="https://www.behance.net/gallery/86052477/Nike-Website-Redesign"
                   target="_blank"
                 >
                   <div class="content-overlay"></div>
                   <img
                     class="content-image"
-                    src="https://source.unsplash.com/collection/1103088/300x250"
+                    src="assets/nike.png"
                   />
                   <div class="content-details fadeIn-bottom">
-                    <h3 class="content-title">This is a title</h3>
-                    <p class="content-text">This is a short description</p>
+                    <h4 class="content-title">Nike</h4>
+                    <p class="content-text">Nike website redesign</p>
                     <button class="btn btn-outline-light">View Project</button>
                   </div>
                 </a>
@@ -259,17 +259,17 @@
             <div class="col-md-4 col-12">
               <div class="item">
                 <a
-                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  href="https://www.behance.net/gallery/78649353/Fashion-Website-Landing-Page-Design"
                   target="_blank"
                 >
                   <div class="content-overlay"></div>
                   <img
                     class="content-image"
-                    src="https://source.unsplash.com/collection/428621/300x250"
+                    src="assets/fashion_hub.png"
                   />
                   <div class="content-details fadeIn-bottom">
-                    <h3 class="content-title">This is a title</h3>
-                    <p class="content-text">This is a short description</p>
+                    <h4 class="content-title">Fashion Hub</h4>
+                    <p class="content-text">Ecommerce fashion website</p>
                     <button class="btn btn-outline-light">View Project</button>
                   </div>
                 </a>
@@ -278,17 +278,17 @@
             <div class="col-md-4 col-12">
               <div class="item">
                 <a
-                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  href="https://www.behance.net/gallery/85637857/Sign-Up-Page-Design"
                   target="_blank"
                 >
                   <div class="content-overlay"></div>
                   <img
                     class="content-image"
-                    src="https://source.unsplash.com/collection/234/300x250"
+                    src="assets/login.png"
                   />
                   <div class="content-details fadeIn-bottom">
-                    <h3 class="content-title">This is a title</h3>
-                    <p class="content-text">This is a short description</p>
+                    <h4 class="content-title">Login Page Design</h4>
+                    <p class="content-text">Login ui Design for mobile application</p>
                     <button class="btn btn-outline-light">View Project</button>
                   </div>
                 </a>
@@ -297,17 +297,17 @@
             <div class="col-md-4 col-12">
               <div class="item">
                 <a
-                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  href="https://www.behance.net/gallery/85783985/Movies-App-Design"
                   target="_blank"
                 >
                   <div class="content-overlay"></div>
                   <img
                     class="content-image"
-                    src="https://source.unsplash.com/collection/450/300x250"
+                    src="assets/netflix.png"
                   />
                   <div class="content-details fadeIn-bottom">
-                    <h3 class="content-title">This is a title</h3>
-                    <p class="content-text">This is a short description</p>
+                    <h4 class="content-title">BeeTv</h4>
+                    <p class="content-text">Streaming app ui design</p>
                     <button class="btn btn-outline-light">View Project</button>
                   </div>
                 </a>
@@ -316,17 +316,17 @@
             <div class="col-md-4 col-12">
               <div class="item">
                 <a
-                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  href="https://www.behance.net/gallery/86706313/Level-Single-Product-Page-Design"
                   target="_blank"
                 >
                   <div class="content-overlay"></div>
                   <img
                     class="content-image"
-                    src="https://source.unsplash.com/collection/1001/300x250"
+                    src="assets/level.png"
                   />
                   <div class="content-details fadeIn-bottom">
-                    <h3 class="content-title">This is a title</h3>
-                    <p class="content-text">This is a short description</p>
+                    <h4 class="content-title">Level</h4>
+                    <p class="content-text">Product website</p>
                     <button class="btn btn-outline-light">View Project</button>
                   </div>
                 </a>
