--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body>
     <!-- start intro -->
-    <section class="intro">
+    <section class="intro" id="home">
       <div class="img-overlay"></div>
       <div class="container">
         <!-- start navbar -->
@@ -40,16 +40,16 @@
           <div class="wrap">
             <ul class="wrap-nav mt-5 py-5">
               <li class="nav-item">
-                <a href="#">Home</a>
+                <a href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a href="#">About</a>
+                <a href="#about">About</a>
               </li>
               <li class="nav-item">
-                <a href="#">Work</a>
+                <a href="#project">Work</a>
               </li>
               <li class="nav-item">
-                <a href="#">Contact</a>
+                <a href="#contact">Contact</a>
               </li>
             </ul>
             <div class="social">
@@ -84,7 +84,7 @@
     </section>
     <!-- end intro -->
     <!-- start about -->
-    <section class="about-me my-5">
+    <section class="about-me my-5" id="about">
       <div class="container">
         <div class="row">
           <div class="col-md-4 com-sm-12">
@@ -211,7 +211,7 @@
     </section>
     <!-- end skill -->
     <!-- start work -->
-    <section class="work my-5">
+    <section class="work my-5" id="project">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -338,7 +338,7 @@
     </section>
     <!-- end work -->
     <!-- start contact -->
-    <section class="contact">
+    <section class="contact" id="contact">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -400,6 +400,52 @@
       </div>
     </section>
     <!-- end contact -->
+    <!-- start footer -->
+    <footer class="py-5 mt-5">
+      <div class="container">
+        <div class="row mx-4">
+          <div class="col-md-2 col-sm-12">
+            <div class="link">
+              <p>Links</p>
+              <ul>
+                <a><li>Home</li></a>
+                <a><li>About</li></a>
+                <a><li>Work</li></a>
+                <a><li>Site map</li></a>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-12">
+            <div class="connect">
+              <p>Stay Tuned</p>
+              <small>Connect with us and stay in the loop.</small>
+              <div class="join mt-4">
+                <a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                <a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></i></a>
+                <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <div class="newsletter">
+            <p>Email updates</p>
+            <small>Join our newsletters</small>
+            <div class="form-group mt-4">
+              <input type="email" name="email" class="form-control" placeholder="Email">
+            </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-12">
+            <div class="questions">
+            <p>Contact us</p>
+            <small>Questions? We've got answer. Try us</small>
+            <button class="btn mt-4">Email us</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- end footer -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
