--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             Freelance web developer from India. I enjoy building everything from
             small business sites to rich interactive web applications.
           </div>
-          <button class="btn btn-outline-light">Get in touch</button>
+          <button class="button-primary">Get in touch</button>
         </div>
         <!-- end title -->
       </div>
@@ -110,7 +110,7 @@
                 first.
               </p>
               <a download="resume.pdf" href="assets/resume.pdf">
-                <button class="btn btn-outline-dark mt-2">Download CV</button>
+                <button class="button-primary mt-2">Download CV</button>
                 </a>
             </div>
           </div>
@@ -133,7 +133,7 @@
               <p>
                 User experience is a person's emotions and attitudes about using a particular product, system or service.
               </p>
-              <button class="btn btn-outline-dark">Read more</button>
+              <button class="button-primary">Read more</button>
             </div>
           </div>
           <div class="col-lg-4 col-12">
@@ -142,7 +142,7 @@
               <p>
                 A brand is a name, term, design, symbol or any other feature that identifies...
               </p>
-              <button class="btn btn-outline-dark">Read more</button>
+              <button class="button-primary">Read more</button>
             </div>
           </div>
           <div class="col-lg-4 col-12">
@@ -151,7 +151,7 @@
               <p>
                 Front-end web development is the practice of converting data to a graphical interface...
               </p>
-              <button class="btn btn-outline-dark">Read more</button>
+              <button class="button-primary">Read more</button>
             </div>
           </div>
         </div>
@@ -232,7 +232,7 @@
                   <div class="content-details fadeIn-bottom">
                     <h4 class="content-title">Tech Media</h4>
                     <p class="content-text">Service website for business promotion</p>
-                    <button class="btn btn-outline-light">View Project</button>
+                    <button class="button-primary">View Project</button>
                   </div>
                 </a>
               </div>
@@ -251,7 +251,7 @@
                   <div class="content-details fadeIn-bottom">
                     <h4 class="content-title">Nike</h4>
                     <p class="content-text">Nike website redesign</p>
-                    <button class="btn btn-outline-light">View Project</button>
+                    <button class="button-primary">View Project</button>
                   </div>
                 </a>
               </div>
@@ -270,7 +270,7 @@
                   <div class="content-details fadeIn-bottom">
                     <h4 class="content-title">Fashion Hub</h4>
                     <p class="content-text">Ecommerce fashion website</p>
-                    <button class="btn btn-outline-light">View Project</button>
+                    <button class="button-primary">View Project</button>
                   </div>
                 </a>
               </div>
@@ -289,7 +289,7 @@
                   <div class="content-details fadeIn-bottom">
                     <h4 class="content-title">Login Page Design</h4>
                     <p class="content-text">Login ui Design for mobile application</p>
-                    <button class="btn btn-outline-light">View Project</button>
+                    <button class="button-primary">View Project</button>
                   </div>
                 </a>
               </div>
@@ -308,7 +308,7 @@
                   <div class="content-details fadeIn-bottom">
                     <h4 class="content-title">BeeTv</h4>
                     <p class="content-text">Streaming app ui design</p>
-                    <button class="btn btn-outline-light">View Project</button>
+                    <button class="button-primary">View Project</button>
                   </div>
                 </a>
               </div>
@@ -327,7 +327,7 @@
                   <div class="content-details fadeIn-bottom">
                     <h4 class="content-title">Level</h4>
                     <p class="content-text">Product website</p>
-                    <button class="btn btn-outline-light">View Project</button>
+                    <button class="button-primary">View Project</button>
                   </div>
                 </a>
               </div>
@@ -338,7 +338,7 @@
     </section>
     <!-- end work -->
     <!-- start contact -->
-    <section class="contact" id="contact">
+    <!-- <section class="contact" id="contact">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -346,7 +346,7 @@
           </div>
           <div class="col-lg-6 col-sm-12">
             <div class="message mx-4">
-              <h4 class="my-5">Got a project, let's connect</h4>
+              <h5 class="my-5">Got a project, let's connect</h5>
               <form action="#" method="POST" class="">
                 <div class="form-group">
                   <input type="text" name="name" id="name" class="form-control" placeholder="Name">
@@ -360,13 +360,13 @@
                 <div class="form-group">
                   <textarea class="form-control" id="message" rows="5" placeholder="Message"></textarea>
                 </div>
-                  <button type="submit" class="btn btn-outline-dark">Submit</button>
+                  <button type="submit" class="button-primary">Submit</button>
               </form>
             </div>
           </div>
           <div class="col-lg-6 col-sm-12">
             <div class="contact-info mx-4">
-              <h4 class="my-5">Contact information</h4>
+              <h5 class="my-5">Contact information</h5>
               <div class="company">
                 <div class="icon">
                   <i class="fa fa-phone" aria-hidden="true"></i>
@@ -398,54 +398,36 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- end contact -->
     <!-- start footer -->
-    <footer class="py-5 mt-5">
+    <section class="collab">
       <div class="container">
-        <div class="row mx-4">
-          <div class="col-md-2 col-sm-12">
-            <div class="link">
-              <p>Links</p>
-              <ul>
-                <a><li>Home</li></a>
-                <a><li>About</li></a>
-                <a><li>Work</li></a>
-                <a><li>Site map</li></a>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-12">
-            <div class="connect">
-              <p>Stay Tuned</p>
-              <small>Connect with us and stay in the loop.</small>
-              <div class="join mt-4">
-                <a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-                <a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></i></a>
-                <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></i></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-12">
-            <div class="newsletter">
-            <p>Email updates</p>
-            <small>Join our newsletters</small>
-            <div class="form-group mt-4">
-              <input type="email" name="email" class="form-control" placeholder="Email">
-            </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-12">
-            <div class="questions">
-            <p>Contact us</p>
-            <small>Questions? We've got answer. Try us</small>
-            <button class="btn mt-4">Email us</button>
+        <div class="row">
+          <div class="col-md-6 mx-auto">
+            <div class="message d-flex flex-column text-center">
+              <h4 class="my-4">I can help</h4>
+              <h5>I'm currently available for freelance work.</h5>
+              <p class="my-3">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then
+              get in touch.</p>
+              <button class="button-primary w-30 my-4 mx-auto"><a href="mailto:abhisek529@gmail.com">Message me</a></button>
             </div>
           </div>
         </div>
       </div>
-    </footer>
+    </section>
     <!-- end footer -->
+    <!-- start copyright -->
+    <section class="copyright py-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <p class="text-center mx-auto m-0">&copy; 2020 Abhisek Paul. All Right Reserve</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end copyright -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
