--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
         <div class="row">
           <div class="col-md-6 mx-auto">
             <div class="message d-flex flex-column text-center">
-              <h4 class="my-4">I can help</h4>
+              <h4 class="my-4">Contact me</h4>
               <h5>I'm currently available for freelance work.</h5>
               <p class="my-3">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then
               get in touch.</p>
