--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
             </ul>
             <div class="social">
               <li class="nav-item">
-                <a href="#">Facebook</a>
+                <a href="https://www.behance.net/abhisekpaul">Behance</a>
               </li>
               <li class="nav-item">
-                <a href="#">Instagram</a>
+                <a href="https://dribbble.com/abhisek05">Dribbble</a>
               </li>
               <li class="nav-item">
-                <a href="#">Linkedin</a>
+                <a href="https://www.linkedin.com/in/abhisek-paul-6b2621197/">Linkedin</a>
               </li>
               <li class="nav-item">
-                <a href="#">Github</a>
+                <a href="https://github.com/abhisek47">Github</a>
               </li>
             </div>
           </div>
@@ -406,7 +406,7 @@
         <div class="row">
           <div class="col-md-6 mx-auto">
             <div class="message d-flex flex-column text-center">
-              <h4 class="my-4">Contact me</h4>
+              <h4 class="my-4">Join with me</h4>
               <h5>I'm currently available for freelance work.</h5>
               <p class="my-3">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then
               get in touch.</p>
