--- a/index.html
+++ b/index.html
@@ -77,7 +77,42 @@
             Freelance web developer from India. I enjoy building everything from
             small business sites to rich interactive web applications.
           </div>
-          <button class="button-primary">Get in touch</button>
+          <!-- start model -->
+          <button type="button" class="button-primary" data-toggle="modal" data-target="#exampleModal">
+            Get in touch
+          </button>
+          
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <!-- <h5 class="modal-title" id="exampleModalLabel">Modal title</h5> -->
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body text-center">
+                  <img src="assets/animat-rocket-color.gif" alt="">
+                  <h4 class="py-2">Let's Connect 🤙</h4>
+                  <p class="">For any work collaborations, fan letters or even a simple chat, take the first step and reach out via e-mail or one of
+                  my social media profiles.</p>
+                  <form action="#" class="text-center">
+                    <div class="form-group">
+                      <input type="email" name="email" id="email" class="form-control" placeholder="Enter you email">
+                    </div>
+                    <button type="submit" class="button-primary">Submit</button>
+                  </form>
+                </div>
+                <!-- <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          <!-- end model -->
         </div>
         <!-- end title -->
       </div>
