add link to website

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Web Developer Portfolio">
+    <meta name="keywords" content="web designer, web developer, freelance web developer">
+    <meta name="author" content="Abhisek Paul">
     <link rel="shortcut icon" href="https://img.icons8.com/color/48/000000/gitlab.png" type="image/x-icon">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
@@ -257,7 +260,7 @@
             <div class="col-md-4 col-12 mx-auto">
               <div class="item">
                 <a
-                  href="https://unsplash.com/photos/HkTMcmlMOUQ"
+                  href="https://abhisek47.github.io/techmedia"
                   target="_blank"
                 >
                   <div class="content-overlay"></div>
@@ -276,7 +279,7 @@
             <div class="col-md-4 col-12">
               <div class="item">
                 <a
-                  href="https://www.behance.net/gallery/86052477/Nike-Website-Redesign"
+                  href="https://abhisek47.github.io/nike"
                   target="_blank"
                 >
                   <div class="content-overlay"></div>
@@ -437,7 +440,7 @@
     </section> -->
     <!-- end contact -->
     <!-- start footer -->
-    <section class="collab">
+    <section class="collab" id="contact">
       <div class="container">
         <div class="row">
           <div class="col-md-6 mx-auto">
