--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
         <div class="bio text-light mb-5">
           <h4>Hi there,</h4>
           <h1 class="mb-5">I'm Abhisek 👋🏻</h1>
-          <div class="mb-5 dev text-center">
+          <p class="mb-5 dev text-center">
             Freelance web developer from India. I enjoy building everything from
             small business sites to rich interactive web applications.
-          </div>
+          </p>
           <!-- start model -->
           <button type="button" class="button-primary" data-toggle="modal" data-target="#exampleModal">
             Get in touch
           </button>
           
           <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
             aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
@@ -102,7 +102,7 @@
                   <h4 class="py-2">Let's Connect 🤙</h4>
                   <p class="">For any work collaborations, fan letters or even a simple chat, take the first step and reach out via e-mail or one of
                   my social media profiles.</p>
-                  <form action="#" class="text-center">
+                  <form action="#" method="POST" class="text-center">
                     <div class="form-group">
                       <input type="email" name="email" id="email" class="form-control" placeholder="Enter you email">
                     </div>
@@ -205,7 +205,7 @@
             <h4 class="text-center">Lets talk about my skills</h4>
             <div class="category mt-5">
               <div class="design">
-                <strong class="">Design</strong>
+                <h5 class="">Design</h5>
                 <ul>
                   <li>UI/UX Design</li>
                   <li>Website Design</li>
@@ -216,7 +216,7 @@
                 </ul>
               </div>
               <div class="development">
-                <strong>Development</strong>
+                <h5>Development</h5>
                 <ul>
                   <li>HTML</li>
                   <li>CSS</li>
@@ -230,7 +230,7 @@
           </div>
           <div class="col-md-6 col-12">
             <h4 class="text-center">Software skills</h4>
-            <div class="software my-5">
+            <div class="software">
               <div>
                 <img src="assets/icons8-adobe-photoshop.svg" alt="software" />
                 <img src="assets//icons8-adobe-xd.svg" alt="software" />
@@ -256,7 +256,7 @@
           <div class="col-lg-12">
             <h4 class="text-center my-2">My Work</h4>
           </div>
-          <div class="project my-5">
+          <div class="project">
             <div class="col-md-4 col-12 mx-auto">
               <div class="item">
                 <a
@@ -449,7 +449,7 @@
               <h5>I'm currently available for freelance work.</h5>
               <p class="my-3">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then
               get in touch.</p>
-              <button class="button-primary w-30 my-4 mx-auto"><a href="mailto:abhisek529@gmail.com">Message me</a></button>
+              <a href="mailto:abhisek529@gmail.com" class="button-primary w-30 my-4 mx-auto">Message me</a>
             </div>
           </div>
         </div>
@@ -461,7 +461,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p class="text-center mx-auto m-0">&copy; 2020 Abhisek Paul. All Right Reserve</p>
+            <div class="text-center rights  mx-auto m-0">&copy; 2020 Abhisek Paul. All Right Reserve</div>
           </div>
         </div>
       </div>
