change font size

--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
           <div class="col-md-6 col-12">
             <h4 class="text-center">Software skills</h4>
             <div class="software">
-              <div>
+              <div class="mt-3">
                 <img src="assets/icons8-adobe-photoshop.svg" alt="software" />
                 <img src="assets//icons8-adobe-xd.svg" alt="software" />
                 <img src="assets/icons8-adobe-illustrator-48.png" alt="">
               </div>
-              <div>
+              <div >
               <img src="assets/icons8-discord-new-logo.svg" alt="software" />
               <img
                 src="assets/icons8-visual-studio-code-2019.svg"
