--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
     <section class="copyright py-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
-            <div class="text-center rights  mx-auto m-0">&copy; 2020 Abhisek Paul. All Right Reserve</div>
+          <div class="col-md-12 d-flex align-items-center">
+            <small class="text-center rights  mx-auto m-0">&copy; 2020 Abhisek Paul. All Right Reserve</small>
           </div>
         </div>
       </div>
