--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
         <!-- start navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
           <a class="navbar-brand" href="#">&#60;/Developer&#62;</a>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item menu">
+              <a href="#about" class="nav-link">About</a>
+            </li>
+            <li class="nav-item menu">
+              <a href="#project" class="nav-link">Work</a>
+            </li>
+            <li class="nav-item menu">
+              <a href="#contact" class="nav-link">Contact</a>
+            </li>
+          </ul>
           <div class="button">
             <a class="btn-open" href="#"></a>
           </div>
@@ -44,16 +55,16 @@
           <div class="wrap">
             <ul class="wrap-nav mt-5 py-5">
               <li class="nav-item">
-                <a href="#home">Home</a>
+                <a href="#home" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a href="#about">About</a>
+                <a href="#about" class="nav-link">About</a>
               </li>
               <li class="nav-item">
-                <a href="#project">Work</a>
+                <a href="#project" class="nav-link">Work</a>
               </li>
               <li class="nav-item">
-                <a href="#contact">Contact</a>
+                <a href="#contact" class="nav-link">Contact</a>
               </li>
             </ul>
             <div class="social">
