add social icon in the navbar

--- a/index.html
+++ b/index.html
@@ -44,6 +44,26 @@
             <li class="nav-item menu">
               <a href="#contact" class="nav-link">Contact</a>
             </li>
+            <li class="nav-item menu">
+              <a href="https://behance.com/abhisek05" class="nav-link">
+                <i class="fa fa-behance" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li class="nav-item menu">
+              <a href="https://dribbble.com/abhisek05" class="nav-link">
+                <i class="fa fa-dribbble" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li class="nav-item menu">
+              <a href="https://linkedin.com/abhisek05" class="nav-link">
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li class="nav-item menu">
+              <a href="https://github.com/abhisek05" class="nav-link">
+                <i class="fa fa-github" aria-hidden="true"></i>
+              </a>
+            </li>
           </ul>
           <div class="button">
             <a class="btn-open" href="#"></a>
@@ -66,16 +86,24 @@
             </ul>
             <div class="social">
               <li class="nav-item">
-                <a href="https://www.behance.net/abhisekpaul">Behance</a>
+                <a href="https://www.behance.net/abhisekpaul">
+                  <i class="fa fa-behance" aria-hidden="true"></i>
+                </a>
               </li>
               <li class="nav-item">
-                <a href="https://dribbble.com/abhisek05">Dribbble</a>
+                <a href="https://dribbble.com/abhisek05">
+                  <i class="fa fa-dribbble" aria-hidden="true"></i>
+                </a>
               </li>
               <li class="nav-item">
-                <a href="https://www.linkedin.com/in/abhisek-paul-6b2621197/">Linkedin</a>
+                <a href="https://www.linkedin.com/in/abhisek-paul-6b2621197/">
+                  <i class="fa fa-linkedin" aria-hidden="true"></i>
+                </a>
               </li>
               <li class="nav-item">
-                <a href="https://github.com/abhisek47">Github</a>
+                <a href="https://github.com/abhisek47">
+                  <i class="fa fa-github" aria-hidden="true"></i>
+                </a>
               </li>
             </div>
           </div>
@@ -93,7 +121,6 @@
           <button type="button" class="button-primary" data-toggle="modal" data-target="#exampleModal">
             Get in touch
           </button>
-          
           <!-- Modal -->
           <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
             aria-hidden="true">
