--- a/index.html
+++ b/index.html
@@ -193,16 +193,21 @@
     </section>
     <!-- end about -->
     <!-- start expertize -->
-    <section class="expertize py-5">
+    <div class="title my-5">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
             <h4 class="text-center my-2">Knowledge & Expertize</h4>
           </div>
         </div>
-        <div class="knowledge my-5">
+      </div>
+    </div>
+    <section class="expertize py-3">
+      <div class="container">
+        <div class="knowledge my-2">
           <div class="col-lg-4 col-12">
             <div class="uidesign speacilize">
+              <img src="assets/animat-pencil-color.gif" alt="design">
               <h5>UI/UX Design</h5>
               <p>
                 User experience is a person's emotions and attitudes about using a particular product, system or service.
@@ -212,6 +217,7 @@
           </div>
           <div class="col-lg-4 col-12">
             <div class="branding speacilize">
+              <img src="assets/animat-diamond-color.gif" alt="branding">
               <h5>Branding</h5>
               <p>
                 A brand is a name, term, design, symbol or any other feature that identifies...
@@ -221,6 +227,7 @@
           </div>
           <div class="col-lg-4 col-12">
             <div class="frontend speacilize">
+              <img src="assets/animat-responsive-color.gif" alt="development">
               <h5>Frontend Dev</h5>
               <p>
                 Front-end web development is the practice of converting data to a graphical interface...
@@ -235,7 +242,7 @@
     <!-- start skill -->
     <section class="skills pt-5">
       <div class="container">
-        <div class="row">
+        <div class="row mx-3">
           <div class="col-md-6 col-12">
             <h4 class="text-center">Lets talk about my skills</h4>
             <div class="category mt-5">
