--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </a>
             </li>
             <li class="nav-item menu">
-              <a href="https://linkedin.com/abhisek05" class="nav-link">
+              <a href="https://www.linkedin.com/in/abhisek-paul-6b2621197/" class="nav-link">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
               </a>
             </li>
