add link to the knowledge section

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <p>
                 User experience is a person's emotions and attitudes about using a particular product, system or service.
               </p>
-              <button class="button-primary">Read more</button>
+              <a href="https://blog.nicolesaidy.com/7-steps-to-become-a-ui-ux-designer-8beed7639a95" target="_blank" class="button-primary">Read more</a>
             </div>
           </div>
           <div class="col-lg-4 col-12">
@@ -222,7 +222,7 @@
               <p>
                 A brand is a name, term, design, symbol or any other feature that identifies...
               </p>
-              <button class="button-primary">Read more</button>
+              <a href="https://medium.com/help-scout/the-psychology-of-color-in-marketing-and-branding-ebb2320a2b0" target="_blank" class="button-primary">Read more</a>
             </div>
           </div>
           <div class="col-lg-4 col-12">
@@ -232,7 +232,7 @@
               <p>
                 Front-end web development is the practice of converting data to a graphical interface...
               </p>
-              <button class="button-primary">Read more</button>
+              <a href="https://medium.com/hackernoon/full-stack-web-development-the-complete-roadmap-9fe43ec0ba32" taget="_blank" class="button-primary">Read more</a>
             </div>
           </div>
         </div>
