--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a href="#contact" class="nav-link">Contact</a>
             </li>
             <li class="nav-item menu">
-              <a href="https://behance.com/abhisek05" class="nav-link">
+              <a href="https://www.behance.net/abhisekpaul" class="nav-link">
                 <i class="fa fa-behance" aria-hidden="true"></i>
               </a>
             </li>
