--- a/index.html
+++ b/index.html
@@ -142,9 +142,12 @@
                   <h4 class="py-2">Let's Connect 🤙</h4>
                   <p class="">For any work collaborations, fan letters or even a simple chat, take the first step and reach out via e-mail or one of
                   my social media profiles.</p>
-                  <form action="#" method="POST" class="text-center">
+                  <form action="server.php" method="POST" class="text-center">
                     <div class="form-group">
-                      <input type="email" name="email" id="email" class="form-control" placeholder="Enter you email">
+                      <input type="text" name="name" id="name" class="form-control" placeholder="Enter you name" required>
+                    </div>
+                    <div class="form-group">
+                      <input type="email" name="email" id="email" class="form-control" placeholder="Enter you email" required>
                     </div>
                     <button type="submit" class="button-primary">Submit</button>
                   </form>
