add loading screen

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
   </head>
 
   <body>
+    <!-- start loading -->
+    <div id="loading">
+      <img src="assets/animat-rocket-color.gif" alt="loading">
+    </div>
+    <!-- end loading -->
     <!-- start intro -->
     <section class="intro" id="home">
       <div class="img-overlay"></div>
