modify modal img

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                   </button>
                 </div>
                 <div class="modal-body text-center">
-                  <img src="assets/animat-rocket-color.gif" alt="">
+                  <img src="assets/newsletter.png" alt="">
                   <h4 class="py-2">Let's Connect 🤙</h4>
                   <p class="">For any work collaborations, fan letters or even a simple chat, take the first step and reach out via e-mail or one of
                   my social media profiles.</p>
